Fixed header color contrast

--- a/Frontend/ShopNest/src/components/Header/Header.css
+++ b/Frontend/ShopNest/src/components/Header/Header.css
@@ -57,7 +57,7 @@
 }
 
 /* Common button styles */
-.header-actions button {
+.header-actions .header-button{
   min-width: 100px;
   padding: 0.8rem 1.2rem;
   transition: all 0.3s ease;
@@ -73,7 +73,7 @@
   cursor: pointer;
 }
 
-.header-actions button:hover {
+.header-actions .header-button:hover{
   background-color: white;
   color: var(--primary-color);
 }
@@ -106,9 +106,22 @@
   color: white;
 }
 
+.profile-initial {
+  width: 45px;
+  height: 45px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 16px;
+  font-weight: bold;
+  color: rgb(17, 16, 16);
+  border-radius: 50%;
+  text-transform: uppercase;
+}
+
 .dropdown-menu {
   position: absolute;
-  top: 100%;
+  top: 110%;
   right: 0;
   background: white;
   border: 1px solid #ddd;
@@ -142,9 +155,6 @@
   color: black;
 }
 
-.dropdown-menu button:hover {
-  background: #f4f4f4;
-}
 
 /* Responsive Design */
 @media (max-width: 768px) {
